fixed issues and changed cli so it works with endpoint
