# api/openapi.yml
@@ -50,10 +50,10 @@ paths:
                 $ref: '#/components/schemas/RestErrResponse'
           description: Bad Request
       summary: Authentication
-  /cli:
+  /openapi:
     get:
       description: Gets openapi file and uploads to s3
-      operationId: endpoints.recieveFile
+      operationId: endpoints.Fuzz
       requestBody:
         content:
           application/json:
@@ -72,7 +72,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/RestErrResponse'
           description: Bad Request
-      summary: Echo
+      summary: Fuzz
 components:
   schemas:
     EndpointsAuthOutput:
