# cmd/api/routes.go
@@ -10,7 +10,8 @@ import (
 func registerRoutes(service *web.Service, hostdocs bool, hosthealth bool) {
 	endpoints.PostEcho(service)
 	endpoints.Authentication(service)
-	endpoints.recieveFile(service)
+	endpoints.Fuzz(service)
+	//endpoints.recieveFile(service)
 	// Swagger UI endpoint at /docs.
 	if hostdocs {
 		service.Docs("/docs", swgui.New)
